--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   run-github-actions:
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
       - name: Simple JS Action
         uses: actions/hello-world-javascript-action@master
